--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript</title>
-    
+    <link real="stylesheet" href="/styles/index.css">
+
 </head>
 <body>
+    <header>
+        <h1> Javascript</h1>
+    </header>
     
 </body>
 </html>
