--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <header>
+        <div>
         <h1> Javascript</h1>
+        <p></p>
+        </div>
     </header>
     
 </body>
